--- a/views/home/register.ejs
+++ b/views/home/register.ejs
@@ -44,6 +44,7 @@
               value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
             />
           </div>
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>"/>
           <div class="form-group">
             <button class="btn btn-primary btn-block" type="submit">Sign Up</button>
           </div>
