--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -22,6 +22,8 @@
               placeholder="Password"
             />
           </div>
+
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
           <button type="submit" class="btn btn-primary btn-block">Login</button>
         </form>
       </div>
