--- a/views/home/login.ejs
+++ b/views/home/login.ejs
@@ -22,6 +22,7 @@
             placeholder="Password"
           />
         </div>
+        <input type="hidden" name="_csrf" value="<%= csrfToken %>"/>
         <button type="submit" class="btn btn-primary btn-block">Login</button>
       </form>
       <p class="lead mt-4">
