--- a/views/admin/productReport.ejs
+++ b/views/admin/productReport.ejs
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid m-t-50 m-b-50">
     <div class="row justify-content-center">
 
         <div class="col-lg-2 col-md-3 col-sm-10 mx-3 my-5">
@@ -30,15 +30,6 @@
                 </div>
             </div>
         </div>
-
-        <!-- <div class="col-lg-2 col-md-3 col-sm-10 mx-3 my-5">
-            <div class="card text-center">
-                <h4 class="card-header bg-info">Still On Stock</h4>
-                <div class="card-body">
-                    <h5 class="card-title"><%= onStock %></h5>
-                </div>
-            </div>
-        </div> -->
 
         <div class="col-lg-2 col-md-3 col-sm-10 mx-3 my-5">
             <div class="card text-center">
