--- a/views/admin/vendorForm.ejs
+++ b/views/admin/vendorForm.ejs
@@ -7,7 +7,7 @@
         <% include ./header %>
 
         <!-- Add product form -->
-        <div class="container-fluid">
+        <div class="container-fluid m-t-50 m-b-50">
             <div class="row justify-content-center">
                 <div class="col-lg-10 col-md-10 col-sm-12" style="border-radius: 15px; background-color: lightgray">
                     <div class="block mx-4 my-4">
