--- a/views/admin/viewProduct.ejs
+++ b/views/admin/viewProduct.ejs
@@ -9,7 +9,7 @@
         <% include ./productReport %>
         
         <!-- Add product form -->
-        <div class="container-fluid table-responsive">
+        <div class="container-fluid table-responsive m-t-50 m-b-50">
             <table id="dataTable" class="table table-light table-striped table-bordered table-hover table-sm mx-8 my-8">
                 <thead>
                     <tr>
