--- a/views/home/products.ejs
+++ b/views/home/products.ejs
@@ -187,7 +187,7 @@
         
                                     <div class="block2-btn-addcart w-size1 trans-0-4">
                                         <!-- Button -->
-                                        <a href="products/<%= product._id %>/addToCart" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4 btn">
+                                        <a href="/cart/addToCart/<%= product._id %>" class="flex-c-m size1 bg4 bo-rad-23 hov1 s-text1 trans-0-4 btn">
                                             Add to Cart
                                         </a>
                                     </div>
