--- a/views/admin/employeeForm.ejs
+++ b/views/admin/employeeForm.ejs
@@ -7,7 +7,7 @@
         <% include ./header %>
 
         <!-- Add product form -->
-        <div class="container-fluid">
+        <div class="container-fluid m-t-50 m-b-50">
             <div class="row justify-content-center">
                 <div class="col-lg-10 col-md-10 col-sm-12" style="border-radius: 15px; background-color: lightgray">
                     <div class="block mx-4 my-4">
@@ -21,6 +21,7 @@
                         <div class="block-form">
                             <% include ../partials/messages %>
                             <form action="/admin/employees/addEmployee" method="post" enctype="multipart/form-data">
+                                <input type="hidden" name="_csrf" value="<%= csrfToken %>"/>
                                 <div class="form-group">
                                     <label class="col-md-auto control-label" for="name"><b>Name</b></label>
                                     <div class="col-md-auto">
@@ -87,10 +88,10 @@
                                     <label class="col-md-auto control-label" for="role"><b>Role</b></label>
                                     <div class="col-md-auto">
                                         <select class="select-chosen text-box" id="role" name="role" multiple>
-                                            <option value="role1">Role 1</option>
-                                            <option value="role2">Role 2</option>
-                                            <option value="role3">Role 3</option>
-                                            <option value="role4">Role 4</option>
+                                            <option value="Admin">Admin</option>
+                                            <option value="Employee">Employee</option>
+                                            <option value="Partner">Partner</option>
+                                            <option value="User">User</option>
                                         </select>
                                     </div>
                                 </div>
@@ -106,7 +107,7 @@
                                         >
                                     </div>
                                 </div>
-                                
+
                                 <div class="form-group">
                                     <div class="col-md-auto">
                                         <button type="submit" class="btn btn-sm btn-primary p-2 mr-2">
