--- a/views/admin/sidebar-wrapper.ejs
+++ b/views/admin/sidebar-wrapper.ejs
@@ -58,7 +58,7 @@
 
         <a href="/admin/statistic"><i class="fa fa-bar-chart-o"></i> Statistic </a>
 
-        <a href="/employees/logout"><i class="fa fa-power-off"></i> Log Out</a>
+        <a href="/users/logout"><i class="fa fa-power-off"></i> Log Out</a>
 
     </div>
 </div>
