--- a/views/admin/viewEmployee.ejs
+++ b/views/admin/viewEmployee.ejs
@@ -7,7 +7,7 @@
         <% include ./header %>
         
         <!-- Add User form -->
-        <div class="container-fluid table-responsive">
+        <div class="container-fluid table-responsive m-t-50 m-b-50">
             <table id="dataTable" class="table table-light table-striped table-bordered table-hover mx-8 my-8">
                 <thead>
                     <tr>
