--- a/views/admin/viewTag.ejs
+++ b/views/admin/viewTag.ejs
@@ -6,7 +6,7 @@
             
             <% include ./header %>
                     <!-- Add product form -->
-            <div class="container-fluid">
+            <div class="container-fluid m-t-50 m-b-50">
                 <div class="row justify-content-center">
                     <div class="col-lg-10 col-md-10 col-sm-12" style="border-radius: 15px; background-color: lightgray">
                         <div class="block mx-4 my-4">
@@ -21,6 +21,7 @@
     
                                 <% include ../partials/messages %>
                                 <form action="/admin/tags/addTag" method="post">
+                                    <input type="hidden" name="_csrf" value="<%= csrfToken %>" />
                                     <div class="form-group">
                                         <label class="col-md-auto control-label" for="name"><b>Tag Name</b></label>
                                         <div class="col-md-auto">
@@ -56,7 +57,7 @@
             </div>
     
             <!-- Category View  -->
-            <div class="container-fluid table-responsive">
+            <div class="container-fluid table-responsive m-t-50 m-b-50">
                 <table id="dataTable" class="table table-light table-striped table-bordered table-hover mx-8 my-8">
                     <thead>
                         <tr>
